[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Enjl-Starry Space Background/background_4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Misc/vignette.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enjl-Starry Space Background/background_1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enjl-Starry Space Background/background_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enjl-Starry Space Background/background_2.png" type="Texture" id=5]
[ext_resource path="res://Music/Glitch/horror_01_drone_glitch_01.ogg" type="AudioStream" id=6]
[ext_resource path="res://Music/Narrative/outro.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/SCRIPTIN.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://src/UI/Outro.gd" type="Script" id=9]
[ext_resource path="res://Assets/LightSprite.png" type="Texture" id=10]
[ext_resource path="res://Assets/BackgroundSet/M1011.png" type="Texture" id=11]
[ext_resource path="res://Assets/BackgroundSet/M1010.png" type="Texture" id=12]
[ext_resource path="res://src/UI/Moon.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 26
extra_spacing_space = 2
font_data = ExtResource( 8 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.113725, 0.0980392, 0.207843, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -667.0
margin_top = -384.0
margin_right = 667.0
margin_bottom = 384.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -665.5
margin_top = -383.5
margin_right = 665.5
margin_bottom = 383.5
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedStars" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.113725 )
position = Vector2( 668.334, 385.303 )
scale = Vector2( 5.18081, 3.37841 )
frames = SubResource( 1 )
frame = 4
playing = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Moon" type="AnimatedSprite" parent="."]
modulate = Color( 0.647059, 0.560784, 0.890196, 0.207843 )
position = Vector2( 1120, 576 )
scale = Vector2( 0.578125, 0.578125 )
frames = SubResource( 2 )
frame = 1
playing = true
script = ExtResource( 13 )

[node name="BG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="NARRATIVE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="Text" type="Label" parent="."]
margin_left = 128.178
margin_top = 39.4822
margin_right = 750.178
margin_bottom = 1960.48
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.858824, 0.854902, 0.909804, 1 )
custom_colors/font_outline_modulate = Color( 0.266667, 0.0666667, 0.309804, 1 )
custom_colors/font_color_shadow = Color( 0.176471, 0.0235294, 0.231373, 1 )
text = "losing through you what seemed myself,
i have found selves unimaginably mine.
beyond sorrow's own joys and hoping's very fears,
this is the light by which my spirit's born,
this is the darkness of my souls's return
this is my sun, my moon and all my stars
i have tested the waters and sought-after the moonlight
and after finding myself
i now rise to the dawn of a NEW DAY."
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 988.0
margin_top = 438.0
margin_right = 1274.0
margin_bottom = 724.0
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 42.0
autostart = true
[connection signal="finished" from="NARRATIVE" to="." method="_on_NARRATIVE_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_moon_press"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
